--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,10 @@
     "tests"
   ],
   "dependencies": {
-    "es6-shim": "^0.35.3"
+    "es6-shim": "^0.35.3",
+    "jspdf": "^1.3.4",
+    "html2canvas": "^0.4.1",
+    "jquery": "^3.2.1",
+    "html2pdf": "https://github.com/eKoopmans/html2pdf.git"
   }
 }
