--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "jspdf": "^1.3.4",
     "html2canvas": "^0.4.1",
     "jquery": "^3.2.1",
-    "html2pdf": "https://github.com/eKoopmans/html2pdf.git"
+    "html2pdf": "https://github.com/eKoopmans/html2pdf.git",
+    "requirejs": "^2.3.3"
   }
 }
