--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "eslint-plugin-standard": "^3.0.1",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1"
+  },
+  "dependencies": {
+    "html2pdf": "0.0.11"
   }
 }
