--- a/package.json
+++ b/package.json
@@ -1,30 +1,89 @@
 {
-  "name": "cv",
+  "name": "@lundiak/cv",
   "version": "1.0.0",
   "description": "My Curriculum Vitae",
-  "main": "index.js",
+  "browser": "dist/app.js",
+  "module": "src/App.jsx",
+  "main": "dist/app.js",
+  "esm": "src/App.jsx",
+  "jsnext:main": "src/App.jsx",
+  "files": [
+    "dist",
+    "src"
+  ],
+  "bundledDependencies": false,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "devBuild": "rm -rf dist && webpack --mode development --env.dev --progress",
+    "prodBuild": "rm -rf dist && webpack --mode production --env.prod",
+    "build": "npm run devBuild",
+    "prodStart": "webpack-dev-server --mode production --env.prod",
+    "start": "webpack-dev-server --mode development --env.dev",
+    "test": "jest --verbose --runInBand",
+    "lint": "eslint --fix --format node_modules/eslint-friendly-formatter \"./src/**/*.js*\"",
+    "analyze": "set NODE_ENV=production&&set BUNDLE_ANALYZE=true && webpack --progress --mode production --env.prod"
+  },
+  "dependencies": {
+    "@react-pdf/renderer": "^1.5.4",
+    "bootstrap": "^4.3.1",
+    "html2pdf": "0.0.11",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-pdf": "^4.0.5",
+    "reactstrap": "^8.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.3.3",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
+    "copy-webpack-plugin": "^5.0.3",
+    "css-hot-loader": "^1.4.3",
+    "css-loader": "^2.1.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
+    "eslint": "^5.14.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-import-resolver-webpack": "^0.11.1",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.17.1",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
+    "file-loader": "^3.0.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^24.7.1",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "prettier": "^1.17.0",
+    "prettier-webpack-plugin": "^1.2.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-hot-loader": "^4.8.3",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.30.0",
+    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-cli": "^3.2.3",
+    "webpack-config-utils": "^2.3.1",
+    "webpack-dev-server": "^3.3.1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/alundiak/cv.git"
   },
-  "author": "",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/alundiak/cv/issues"
   },
-  "homepage": "https://github.com/alundiak/cv#readme",
-  "devDependencies": {
-    "eslint": "^3.19.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "gulp": "^3.9.1",
-    "gulp-eslint": "^3.0.1"
-  },
-  "dependencies": {
-    "html2pdf": "0.0.11"
-  }
+  "homepage": "hhttps://github.com/alundiak/cv#readme",
+  "author": "Andrii Lundiak",
+  "license": "ISC"
 }
