--- a/.eslintrc
+++ b/.eslintrc
@@ -52,6 +52,8 @@
         "react/jsx-indent-props": 0,
         "react/prefer-stateless-function": 0,
         "react/jsx-one-expression-per-line": 0,
-        "react/jsx-closing-bracket-location": 0
+        "react/jsx-closing-bracket-location": 0,
+        "react/jsx-filename-extension": 0,
+        "react/no-array-index-key": 0
     }
 }
