--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^1.5.4",
+    "@react-pdf/styled-components": "^1.4.0",
     "bootstrap": "^4.3.1",
     "html2pdf": "0.0.11",
     "prop-types": "^15.7.2",
