Added Routing. As an example of usage created alternative page layout. Updated dist (for master branch as github page base). gh-pages branch will contain dedicated deploy version.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "src"
   ],
   "bundledDependencies": false,
+  "homepage": "https://github.com/alundiak/cv",
   "scripts": {
     "devBuild": "rm -rf dist && webpack --mode development --env.dev --progress",
     "prodBuild": "rm -rf dist && webpack --mode production --env.prod",
@@ -20,43 +21,47 @@
     "start": "webpack-dev-server --mode development --env.dev",
     "test": "jest --verbose --runInBand",
     "lint": "eslint --fix --format node_modules/eslint-friendly-formatter \"./src/**/*.js*\"",
-    "analyze": "set NODE_ENV=production&&set BUNDLE_ANALYZE=true && webpack --progress --mode production --env.prod"
+    "analyze": "set NODE_ENV=production&&set BUNDLE_ANALYZE=true && webpack --progress --mode production --env.prod",
+    "predeploy": "npm run prodBuild",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@react-pdf/renderer": "^1.6.2",
+    "@react-pdf/renderer": "^1.6.3",
     "@react-pdf/styled-components": "^1.4.0",
     "bootstrap": "^4.3.1",
+    "gh-pages": "^2.0.1",
     "html2pdf": "0.0.11",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-pdf": "^4.1.0",
-    "reactstrap": "^8.0.0"
+    "react-router-dom": "^5.0.1",
+    "reactstrap": "^8.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-export-default-from": "^7.5.2",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.4.4",
+    "@babel/register": "^7.5.5",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.0.3",
     "css-hot-loader": "^1.4.3",
-    "css-loader": "^3.0.0",
+    "css-loader": "^3.1.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb": "^17.1.1",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-import-resolver-webpack": "^0.11.1",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0",
-    "file-loader": "^4.0.0",
+    "eslint-loader": "^2.2.1",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.2",
+    "file-loader": "^4.1.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
@@ -69,11 +74,11 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-hot-loader": "^4.11.1",
-    "url-loader": "^2.0.0",
-    "webpack": "^4.35.0",
+    "react-hot-loader": "^4.12.8",
+    "url-loader": "^2.1.0",
+    "webpack": "^4.36.1",
     "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.3.5",
+    "webpack-cli": "^3.3.6",
     "webpack-config-utils": "^2.3.1",
     "webpack-dev-server": "^3.7.2"
   },
