--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
     "react-pdf": "^4.1.0",
     "react-router-dom": "^5.0.1",
     "reactstrap": "^8.0.1"
